--- a/configs/text.yaml
+++ b/configs/text.yaml
@@ -4,6 +4,7 @@ input:
 # input text prompt (default to None, can be input in GUI too)
 prompt:
 negative_prompt:
+inverse_text: ''
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
 # estimated elevation angle for input image 
@@ -25,6 +26,17 @@ mvdream: False
 imagedream: False
 # use stable-zero123 instead of zero123-xl
 stable_zero123: False 
+# use ISM loss
+ISM: False 
+seed: 42
+warmup_iter: 1500
+xs_delta_t: 200
+xs_inv_steps: 5
+xs_eta: 0.0
+delta_t: 25
+delta_t_start: 100
+denoise_guidance_scale: 1.0
+guidance_scale: 7.5
 # guidance loss weights (0 to disable)
 lambda_sd: 1
 lambda_zero123: 0
@@ -54,7 +66,7 @@ train_geo: False
 invert_bg_prob: 0.5
 
 ### GUI
-gui: False
+gui: True
 force_cuda_rast: False
 # GUI resolution
 H: 800
