--- a/configs/text_ISM.yaml
+++ b/configs/text_ISM.yaml
@@ -3,7 +3,8 @@
 input: 
 # input text prompt (default to None, can be input in GUI too)
 prompt:
-negative_prompt: "ugly, bad anatomy, blurry, pixelated obscure, unnatural colors, poor lighting, dull, and unclear, cropped, lowres, low quality, artifacts, duplicate, morbid, mutilated, poorly drawn face, deformed, dehydrated, bad proportions"
+negative_prompt: 'unrealistic, blurry, low quality, out of focus, ugly, low contrast, dull, low-resolution, oversaturation.'
+inverse_text: ''
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
 # estimated elevation angle for input image 
@@ -20,11 +21,23 @@ save_path: ???
 
 ### Training
 # use mvdream instead of sd 2.1
-mvdream: True
+mvdream: False
 # use imagedream
 imagedream: False
 # use stable-zero123 instead of zero123-xl
 stable_zero123: False 
+# use ISM loss
+ISM: True 
+seed: 42
+warmup_iter: 1500
+xs_delta_t: 200
+xs_inv_steps: 5
+xs_eta: 0.0
+delta_t: 25
+delta_t_start: 100
+denoise_guidance_scale: 1.0
+guidance_scale: 7.5
+lambda_guidance: 0.1
 # guidance loss weights (0 to disable)
 lambda_sd: 1
 lambda_zero123: 0
@@ -55,7 +68,7 @@ invert_bg_prob: 0.5
 
 ### GUI
 gui: False
-force_cuda_rast: True
+force_cuda_rast: False
 # GUI resolution
 H: 800
 W: 800
