--- a/configs/text_ISM.yaml
+++ b/configs/text_ISM.yaml
@@ -5,7 +5,7 @@ input:
 prompt:
 negative_prompt: 'unrealistic, blurry, low quality, out of focus, ugly, low contrast, dull, low-resolution, oversaturation.'
 inverse_text: ''
-point_e: "icecream"
+point_e: False
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
 # estimated elevation angle for input image 
