ISM fix + started point-e

--- a/configs/text_ISM.yaml
+++ b/configs/text_ISM.yaml
@@ -5,7 +5,8 @@ input:
 prompt:
 negative_prompt: 'unrealistic, blurry, low quality, out of focus, ugly, low contrast, dull, low-resolution, oversaturation.'
 inverse_text: ''
-point_e: False
+
+
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
 # estimated elevation angle for input image 
@@ -28,7 +29,9 @@ imagedream: False
 # use stable-zero123 instead of zero123-xl
 stable_zero123: False 
 # use ISM loss
-ISM: True 
+ISM: True
+
+#ISM settings
 seed: 42
 warmup_iter: 1500
 xs_delta_t: 200
@@ -39,6 +42,7 @@ delta_t_start: 100
 denoise_guidance_scale: 1.0
 guidance_scale: 7.5
 lambda_guidance: 0.1
+
 # guidance loss weights (0 to disable)
 lambda_sd: 1
 lambda_zero123: 0
@@ -75,7 +79,8 @@ H: 800
 W: 800
 
 ### Gaussian splatting
-num_pts: 5000
+point_e: "icecream"
+num_pts: 20
 sh_degree: 0
 position_lr_init: 0.001
 position_lr_final: 0.00002
