--- a/configs/text_ISM.yaml
+++ b/configs/text_ISM.yaml
@@ -72,14 +72,14 @@ train_geo: False
 invert_bg_prob: 0.5
 
 ### GUI
-gui: True
+gui: False
 force_cuda_rast: False
 # GUI resolution
 H: 800
 W: 800
 
 ### Gaussian splatting
-point_e: "an icecream"
+point_e: "SHAPE_an icecream"
 num_pts: 10
 sh_degree: 0
 position_lr_init: 0.001
