--- a/configs/text.yaml
+++ b/configs/text.yaml
@@ -17,7 +17,7 @@ ref_size: 256
 density_thresh: 1
 
 ### Output
-outdir: logs/baseline
+outdir: logs/baseline_ism
 mesh_format: obj
 save_path: ???
 
