--- a/configs/text_mv.yaml
+++ b/configs/text_mv.yaml
@@ -1,9 +1,27 @@
+# input text prompt (default to None, can be input in GUI too)
+prompt:
+# use mvdream instead of sd 2.1
+mvdream: True
+# SDS (Default) / ISM / MSE 
+stage1: SDS
+# SDS / ISM / MSE (Default)
+stage2: MSE
+## for point_e / shap_e use:
+# OFF: point_e: False (default)
+# POINT-E: "an icecream" 
+# SHAPE-E: "SHAPE_an icecream" (append SHAPE_))
+point_e: False
+# for point_e / shap_e -> num_pts: 10 || for default num_pts: 5000
+num_pts: 5000
+
 ### Input
 # input rgba image path (default to None, can be load in GUI too)
 input: 
-# input text prompt (default to None, can be input in GUI too)
-prompt:
 negative_prompt: "ugly, bad anatomy, blurry, pixelated obscure, unnatural colors, poor lighting, dull, and unclear, cropped, lowres, low quality, artifacts, duplicate, morbid, mutilated, poorly drawn face, deformed, dehydrated, bad proportions"
+
+inverse_text: ''
+
+
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
 # estimated elevation angle for input image 
@@ -14,19 +32,10 @@ ref_size: 256
 density_thresh: 1
 
 ### Output
-outdir: logs/baseline_mvdream
+outdir: logs/baseline
 mesh_format: obj
 save_path: ???
 
-### Training
-# use mvdream instead of sd 2.1
-mvdream: True
-# use imagedream
-imagedream: False
-# use stable-zero123 instead of zero123-xl
-stable_zero123: False 
-# use ISM loss
-ISM: False
 
 #ISM settings
 seed: 42
@@ -34,7 +43,7 @@ warmup_iter: 1500
 xs_delta_t: 200
 xs_inv_steps: 5
 xs_eta: 0.0
-delta_t: 50
+delta_t: 25
 delta_t_start: 100
 denoise_guidance_scale: 1.0
 guidance_scale: 7.5
@@ -78,8 +87,6 @@ H: 800
 W: 800
 
 ### Gaussian splatting
-point_e: False
-num_pts: 5000
 sh_degree: 0
 position_lr_init: 0.001
 position_lr_final: 0.00002
@@ -105,6 +112,7 @@ densify_grad_threshold: 0.01
 # densification_interval: 100
 # opacity_reset_interval: 300
 # densify_grad_threshold: 0.00075
+
 ### Textured Mesh
 geom_lr: 0.0001
 texture_lr: 0.2
