--- a/configs/text_mv_ism.yaml
+++ b/configs/text_mv_ism.yaml
@@ -1,10 +1,26 @@
+# input text prompt (default to None, can be input in GUI too)
+prompt:
+# use mvdream instead of sd 2.1
+mvdream: TRUE
+# SDS (Default) / ISM / MSE 
+stage1: ISM
+# SDS / ISM / MSE (Default)
+stage2: MSE
+## for point_e / shap_e use:
+# OFF: point_e: False (default)
+# POINT-E: "an icecream" 
+# SHAPE-E: "SHAPE_an icecream" (append SHAPE_))
+point_e: False
+# for point_e / shap_e -> num_pts: 10 || for default num_pts: 5000
+num_pts: 5000
+
 ### Input
 # input rgba image path (default to None, can be load in GUI too)
 input: 
-# input text prompt (default to None, can be input in GUI too)
-prompt:
 negative_prompt: "ugly, bad anatomy, blurry, pixelated obscure, unnatural colors, poor lighting, dull, and unclear, cropped, lowres, low quality, artifacts, duplicate, morbid, mutilated, poorly drawn face, deformed, dehydrated, bad proportions"
+
 inverse_text: ''
+
 
 # input mesh for stage 2 (auto-search from stage 1 output path if None)
 mesh:
@@ -16,19 +32,10 @@ ref_size: 256
 density_thresh: 1
 
 ### Output
-outdir: logs/mvdream_ism
+outdir: logs/baseline
 mesh_format: obj
 save_path: ???
 
-### Training
-# use mvdream instead of sd 2.1
-mvdream: True
-# use imagedream
-imagedream: False
-# use stable-zero123 instead of zero123-xl
-stable_zero123: False 
-# use ISM loss
-ISM: True
 
 #ISM settings
 seed: 42
@@ -36,7 +43,7 @@ warmup_iter: 1500
 xs_delta_t: 200
 xs_inv_steps: 5
 xs_eta: 0.0
-delta_t: 50
+delta_t: 25
 delta_t_start: 100
 denoise_guidance_scale: 1.0
 guidance_scale: 7.5
@@ -47,6 +54,8 @@ max_t_range: 0.98
 # guidance loss weights (0 to disable)
 lambda_sd: 1
 lambda_zero123: 0
+# warmup rgb supervision for image-to-3d
+warmup_rgb_loss: True
 # training batch size per iter
 batch_size: 1
 # training iterations for stage 1
@@ -78,11 +87,6 @@ H: 800
 W: 800
 
 ### Gaussian splatting
-## for point_e / shap_e use:
-#point_e: "SHAPE_an icecream" || point_e: False
-point_e: False
-# for point_e / shap_e -> num_pts: 10 || for default num_pts: 5000
-num_pts: 5000
 sh_degree: 0
 position_lr_init: 0.001
 position_lr_final: 0.00002
