--- a/configs/text_mv_ism.yaml
+++ b/configs/text_mv_ism.yaml
@@ -11,7 +11,6 @@ stage2: MSE
 # POINT-E: "an icecream" 
 # SHAPE-E: "SHAPE_an icecream" (append SHAPE_))
 point_e: False
-# for point_e / shap_e -> num_pts: 10 || for default num_pts: 5000
 num_pts: 5000
 outdir: logs/MV_ISM
 
@@ -97,21 +96,21 @@ opacity_lr: 0.05
 scaling_lr: 0.005
 rotation_lr: 0.005
 
-# SDS
-percent_dense: 0.01
-density_start_iter: 0
-density_end_iter: 3000
-densification_interval: 50
-opacity_reset_interval: 700
-densify_grad_threshold: 0.01
+# # SDS
+# percent_dense: 0.01
+# density_start_iter: 0
+# density_end_iter: 3000
+# densification_interval: 50
+# opacity_reset_interval: 700
+# densify_grad_threshold: 0.01
 
-# # ISM
-# percent_dense: 0.003
-# density_start_iter: 100
-# density_end_iter: 30_00 
-# densification_interval: 100
-# opacity_reset_interval: 300
-# densify_grad_threshold: 0.00075
+# ISM
+percent_dense: 0.003
+density_start_iter: 100
+density_end_iter: 300 
+densification_interval: 100
+opacity_reset_interval: 300
+densify_grad_threshold: 0.00075
 
 ### Textured Mesh
 geom_lr: 0.0001
